# training

./: .gitignore  pyproject.toml
bulletin_parser/: progress.json  runner.py
bulletin_parser/alembic/: env.py
bulletin_parser/alembic/versions/: 2026_06_12_1658-a96c13816542_create_table_spimex_trading_results.py
bulletin_parser/core/: __init__.py  logger.py  settings.py
bulletin_parser/core/models/: __init__.py  db_helper.py  spimex_trading_results.py
bulletin_parser/downloader/: __init__.py  downloader.py
bulletin_parser/dto/: __init__.py  save_result_data.py  trading_result_dto.py
bulletin_parser/page_parser/: __init__.py  page_parser.py
bulletin_parser/parsers/: __init__.py  factory.py  pdf_parser.py  xls_parser.py
bulletin_parser/repository/: __init__.py  clear_table.py  spimex_trading_results_repo.py
bulletin_parser/services/: __init__.py  spimex_trading_results_service.py
scheme_bd/alembic/: env.py
scheme_bd/alembic/versions/: 2026_06_02_2044-88bc6e27af6f_create_tables.py
scheme_bd/core/: __init__.py  config.py
scheme_bd/core/models/: __init__.py  author.py  base.py  book.py  buy.py  buy_book.py  buy_step.py  city.py  client.py  db_helper.py  genre.py  step.py
