[project]
name = "database"
version = "0.1.0"
description = "Тестовое задание на проектирование БД"
authors = [
    {name = "vadim",email = "lzaitsev@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "greenlet (>=3.5.1,<4.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "lxml (>=6.1.1,<7.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
